[metadata]
name = lightning-ir
version = attr: lightning_ir.__version__
author = Ferdinand Schlatt
author_email = ferdinand.schlatt@uni-jena.de
description = Your one-stop shop for fine-tuning and running neural ranking models.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords = information-retrieval
license = Apache-2.0 license
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    transformers[torch]
    ir_datasets
    ir-measures
    lightning
    pandas
    jsonargparse[signatures]>=4.27.7
    sentencepiece
    protobuf

[options.extras_require]
test =
    pytest>=8.0,==8.*
    pytest-cov>=5.0,==5.*
    colbert-ai
    # splade@git+https://github.com/naver/splade.git # Should actually be installed with --no-deps and omegaconf must be loaded separately
    sentence-transformers
    faiss-cpu
dev =
    black
    flake8
    isort
    mypy
docs =
    sphinx
    myst-parser
    sphinxawesome-theme
    sphinx-toolbox

[options.entry_points]
console_scripts =
    lightning-ir = lightning_ir.main:main

[options.packages.find]
include =
    lightning_ir
    lightning_ir.*
exclude =
    examples*
    docs*
    tests*

[flake8]
max-line-length = 120
extend-ignore = E203
